# BASH-Model

./: .gitignore  CMakeLists.txt  SCAPE.vcxproj  SetupIK.xml  addMarkers.py  main.py  utils.py
data/OSIM/: DJ1_tr_locked.mot  IK_c33_99.mot  RajagopalModified2016_withArms_lockedSubtalarMTP_KA_Mocap_scaled.osim  RajagopalModified2016_withArms_lockedSubtalarMTP_KA_Mocap_scaled_new.osim  activations.sto  addMarkers.py  ik_taskSet.xml  ik_taskSet_obliquity.xml  motion.mot  referenceMotion.mot  referenceMotion_0mtpsubtalar.mot  referenceMotion_backup.mot  referenceScaledModel.osim  referenceScaledModel_backup.osim  referenceScaledModel_lockedmtpsubtalar.osim  referenceScaledModel_markersBASH.osim  referenceScaledModel_symm.osim  runMaD_Scaled.osim  subject2_withMTP_weldRadius_scaled_new.osim  subject3_c33.osim  subject3_c33_new.osim  testModel_markersBASH.osim  testMotion.mot
data/baselineModel/: baselineModel.blend  baselineModel.blend1
data/cache/mapping/: OSIMinSCAPEpose.mot  _ik_marker_errors.sto  markersOnSCAPE.trc
data/cache/mesh/runMaD_Scaled.osim/Curved_Mean_Exp_Kinem.mot/: 1_scaled.ply  2_transformed_0000.ply  2_transformed_0001.ply  2_transformed_0002.ply  2_transformed_0003.ply  2_transformed_0004.ply  2_transformed_0005.ply  2_transformed_0006.ply  2_transformed_0007.ply  2_transformed_0008.ply  2_transformed_0009.ply  2_transformed_0010.ply  2_transformed_0011.ply  2_transformed_0012.ply  2_transformed_0013.ply  2_transformed_0014.ply  2_transformed_0015.ply  2_transformed_0016.ply  2_transformed_0017.ply  2_transformed_0018.ply  2_transformed_0019.ply  2_transformed_0020.ply  2_transformed_0021.ply  2_transformed_0022.ply  2_transformed_0023.ply  2_transformed_0024.ply  2_transformed_0025.ply  2_transformed_0026.ply  2_transformed_0027.ply  2_transformed_0028.ply  2_transformed_0029.ply  2_transformed_0030.ply  2_transformed_0031.ply  2_transformed_0032.ply  2_transformed_0033.ply  2_transformed_0034.ply  2_transformed_0035.ply  2_transformed_0036.ply  2_transformed_0037.ply  2_transformed_0038.ply  (+61 more)
data/cache/mesh/runMaD_Scaled.osim/Curved_Mean_Exp_Kinem_1.mot/: 2_transformed_0000.ply  2_transformed_0002.ply  2_transformed_0005.ply  2_transformed_0007.ply  2_transformed_0008.ply  2_transformed_0011.ply  2_transformed_0013.ply  2_transformed_0015.ply  2_transformed_0017.ply  2_transformed_0018.ply  2_transformed_0020.ply  2_transformed_0021.ply  2_transformed_0023.ply  2_transformed_0025.ply  2_transformed_0026.ply  2_transformed_0027.ply  2_transformed_0028.ply  2_transformed_0031.ply  2_transformed_0032.ply  2_transformed_0033.ply  2_transformed_0034.ply  2_transformed_0037.ply  2_transformed_0038.ply  2_transformed_0040.ply  2_transformed_0044.ply  2_transformed_0047.ply  2_transformed_0048.ply  3_scapespace_0001.ply  3_scapespace_0002.ply  3_scapespace_0003.ply  3_scapespace_0004.ply  3_scapespace_0005.ply  3_scapespace_0010.ply  3_scapespace_0011.ply  3_scapespace_0012.ply  3_scapespace_0015.ply  3_scapespace_0016.ply  3_scapespace_0017.ply  3_scapespace_0018.ply  3_scapespace_0019.ply  (+15 more)
data/cache/mesh/runMaD_Scaled.osim/Running_Sim_Kinem.mot/: 0_default.ply
data/cache/mesh/subject2_withMTP_weldRadius_scaled_new.osim/SetupScaling_weldRadius.xml/motion.mot/: 1_scaled.ply  2_transformed_0000.ply
data/cache/mesh/subject2_withMTP_weldRadius_scaled_new.osim/motion.mot/: 1_scaled.ply  2_transformed_0001.ply  2_transformed_0002.ply  2_transformed_0003.ply  2_transformed_0004.ply  2_transformed_0005.ply  2_transformed_0006.ply  2_transformed_0007.ply  2_transformed_0008.ply  2_transformed_0009.ply  2_transformed_0010.ply  2_transformed_0011.ply  2_transformed_0012.ply  2_transformed_0013.ply  2_transformed_0014.ply  2_transformed_0015.ply  2_transformed_0016.ply  2_transformed_0017.ply  2_transformed_0018.ply  2_transformed_0019.ply  2_transformed_0020.ply  2_transformed_0021.ply  2_transformed_0022.ply  2_transformed_0023.ply  2_transformed_0024.ply  2_transformed_0025.ply  2_transformed_0026.ply  2_transformed_0027.ply  2_transformed_0028.ply  2_transformed_0029.ply  2_transformed_0030.ply  2_transformed_0031.ply  2_transformed_0032.ply  2_transformed_0033.ply  2_transformed_0034.ply  2_transformed_0035.ply  2_transformed_0036.ply  2_transformed_0037.ply  2_transformed_0038.ply  2_transformed_0039.ply  (+360 more)
data/cache/mesh/subject3_c33_new.osim/IK_c33_99.mot/: 1_scaled.ply  2_transformed_0000.ply  2_transformed_0001.ply  2_transformed_0002.ply  2_transformed_0003.ply  2_transformed_0004.ply  2_transformed_0005.ply  2_transformed_0006.ply  2_transformed_0007.ply  2_transformed_0008.ply  2_transformed_0009.ply  2_transformed_0010.ply  2_transformed_0011.ply  2_transformed_0012.ply  2_transformed_0013.ply  2_transformed_0014.ply  2_transformed_0015.ply  2_transformed_0016.ply  2_transformed_0017.ply  2_transformed_0018.ply  2_transformed_0019.ply  2_transformed_0020.ply  2_transformed_0021.ply  2_transformed_0022.ply  2_transformed_0023.ply  2_transformed_0024.ply  2_transformed_0025.ply  2_transformed_0026.ply  2_transformed_0027.ply  2_transformed_0028.ply  2_transformed_0029.ply  2_transformed_0030.ply  2_transformed_0031.ply  2_transformed_0032.ply  2_transformed_0033.ply  2_transformed_0034.ply  2_transformed_0035.ply  2_transformed_0036.ply  2_transformed_0037.ply  2_transformed_0038.ply  (+103 more)
include/SCAPE/: io.h  osim.h  settings.h  world.h
libRender/: CMakeLists.txt  libRender.vcxproj
libRender/include/render/: camera.h
libRender/src/: camera.cpp
libSCAPE/: CMakeLists.txt  libSCAPE.vcxproj
libSCAPE/include/SCAPE/: PCA_basis.h  SCAPE.h
src/: main.cpp  model.cpp  osim.cpp  settings.h  window.cpp  window.h  world.cpp  world.h
